tests/baselines/reference/systemModule2.errors.txt
error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
systemModule2.ts(2,1): error TS1218: Export assignment is not supported when '--module' flag is 'system'.


!!! error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== systemModule2.ts (1 errors) ====
    var x = 1;
    export = x;
    ~~~~~~~~~~~
!!! error TS1218: Export assignment is not supported when '--module' flag is 'system'.